# rust-emperor

./: .gitignore  ALL_TEMPLATES_UPDATED.md  ARMY_FEATURE.md  Cargo.toml  DEV_CONTINUATION_GUIDE.md  DOCS_INDEX.md  EMOJI_REPLACEMENT_SUMMARY.md  GAMEPLAY_VISUAL.md  ICON_REFERENCE.md  IMAGE_UPSCALING.md  IMPLEMENTATION_SUMMARY.md  KINGDOM_VISUAL_FEATURE.md  MILITARY_PANEL_CHANGELOG.md  MILITARY_PANEL_IMPLEMENTATION.md  MILITARY_PANEL_README.md  MILITARY_PANEL_REDESIGN_SUMMARY.md  PANELS_CONSISTENCY_GUIDE.md  POSITIONING_ADJUSTMENTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REDESIGN_COMPARISON.md  REDESIGN_EXECUTIVE_SUMMARY.md  REDESIGN_SUMMARY.md  ROUND_REPORT_FEATURE.md  TAXES_FOOD_PREVIEW_FEATURE.md  TEMPLATES_QUICKSTART.md  TESTING_REDESIGN.md  TESTING_ROUND_REPORT.md  TESTING_WIN_LOSE_SCREEN.md  TRADE_PANEL_BUGFIX_LOG.md  TRADE_PANEL_CHANGELOG.md  TRADE_PANEL_DOCS_INDEX.md  TRADE_PANEL_EXECUTIVE_SUMMARY.md  TRADE_PANEL_QUICK_REFERENCE.md  TRADE_PANEL_README.md  TRADE_PANEL_REDESIGN.md  TRADE_PANEL_SUMMARY.md  TRADE_PANEL_TESTING.md  TRADE_PANEL_VISUAL_GUIDE.md  (+7 more)
src/: filters.rs  main.rs
src/game/: events.rs  mod.rs  state.rs
src/routes/: game.rs  menu.rs  mod.rs
static/: test_images.html
static/css/: kingdom.css  style.css
templates/: about.html  army.html  base.html  game.html  highscores.html  menu.html  new_game_form.html  report.html  trade.html
